added: fonts, mixins, variables

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 {{> head }}
 
 <div class="container">
+	<p>Hello! This is a service page</p>
+
 	<p>Navigate using /pages/page-name.html</p>
-	<a href="/pages/second-page.html">Second</a>
+	<a href="/pages/main.html">Main page</a>
 </div>
 
 {{> footer }}
